# segmenter_model_zoo

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: conf.py
playbooks/: demo_1_using_basic_models.ipynb  demo_2_using_super_model.ipynb  pull_model_from_quilt.ipynb
segmenter_model_zoo/: __init__.py  quilt_utils.py  utils.py  zoo.py
segmenter_model_zoo/model_wrapper/: DNA_MEM_instance_basic.py  DNA_MEM_instance_plus_LF.py  DNA_MEM_instance_plus_LF_two_camera.py  LMNB1_morphological_production_alpha.py  LMNB1_morphological_with_labelfree.py  structure_AAVS1_100x_hipsc.py  structure_H2B_100x_hipsc.py
segmenter_model_zoo/tests/: test_function.py
