[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segmenter-model-zoo"
dynamic = ["version"]
description = "Scripts and API for running Deep Learning models from segmenter"
readme = "README.md"
license = { text = "Allen Institute Software License" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "tifffile>=2023.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "torch>=2.1",
    "quilt3>=5.0",
    "aicsmlsegment",
]

[project.optional-dependencies]
itk = [
    "itk>=5.3",
]
# labelfree and celldetect extras require packages not on PyPI:
#   labelfree: pytorch-fnet (install from source)
#   celldetect: cell-detector (install from source)

[project.scripts]
run_model_zoo = "segmenter_model_zoo.bin.batch_dl_run:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.version]
path = "segmenter_model_zoo/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["segmenter_model_zoo"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
length-sort = true

[tool.pytest.ini_options]
testpaths = ["segmenter_model_zoo/tests"]
